# IF_toolkit

./: README.md  pyproject.toml
.github/workflows/: tests.yml
FairLogue/: __init__.py  ex_data_estimation.csv  ex_data_external.csv  requirements.txt
FairLogue/Component1/: synthetic_test.py
FairLogue/Component2/: functions_fairness.py  functions_smallsubgroups.py
FairLogue/Component2/Synthetic Data Generation/: ex_data_estimation.py
FairLogue/Component3/: __init__.py  plots.py  synthetic_test.py
FairLogue/Component3/docs/: outcome_models.md  plots.md
docs/: component1.md  component2.md  component3.md
iftoolkit/: __init__.py  ex_data_small.csv
iftoolkit.egg-info/: PKG-INFO
iftoolkit/Component1/: __init__.py  intersectional_metrics.py  plots.py  synthetic_test.py  utilities.py
iftoolkit/Component2/: __init__.py  counterfactual_IF_treatment_driver.py  ex_data_estimation.csv  functions_format.py  functions_plots.py
iftoolkit/Component2/Synthetic Data Generation/: ex_data_external.py  ex_data_small.py
iftoolkit/Component3/: Fairness.py  README.md  __init__.py  estimation_functions.py  helpers.py  model.py  nn_wrappers.py  outcome_models.py  plots.py  requirements.txt  synthetic_test.py
iftoolkit/Component3/docs/: estimation_functions.md  helpers.md  model.md
tests/: struct_test.py  test_component1.py  test_component2.py  test_component3.py
