[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iftoolkit"
version = "0.1.0"
description = "Intersectional Fairness Toolkit with counterfactual estimation, modeling, and u-value inference."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nick S." }]
dependencies = [
  "lightgbm==4.6.0",
  "matplotlib>=3.5,<3.9",
  "numpy>=1.22, <2.0",
  "pandas==2.3.3",
  "scikit_learn==1.7.2",
  "scipy==1.16.3",
  "seaborn==0.13.2",
  "statsmodels==0.14.5",
  "xgboost==3.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.5",
  "jupyter>=1.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.scripts]
iftoolkit = "iftoolkit.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"